--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Smart tech services & digital training by MGL Tech Hub.">
     <meta name="Author" content="Marveey Goodlife">
-    <title>MGL Tech Hub | Home</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="form.css">
+    <title>MARVEEYLABS | Home</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/form.css">
      <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -26,8 +26,8 @@
                 <!-- navigation header -->
               <div class="nav-header">
 <!--                 <img src="Assets/logo/red-bg.bmp" alt="logo" class="logo">
- -->                <a href="index.html" class="h1-a">
-  <h1>MGL  Tech Hub
+ -->                <a href="/index.html" class="h1-a">
+  <h1>MARVEEYLABS
   </h1>
  </a>
                 <button class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
@@ -36,19 +36,19 @@
               <!-- links -->
                <ul class="links">
                 <li>
-                    <a href="index.html">home</a>
+                    <a href="/index.html">home</a>
                 </li>
                 <li>
-                    <a href="about.html">about</a>
+                    <a href="/pages/about.html">about</a>
                 </li>
                 <li>
-                    <a href="services.html">services</a>
+                    <a href="/pages/services.html">services</a>
                 </li>
                 <li>
-                    <a href="courses.html">courses</a>
+                    <a href="/pages/courses.html">courses</a>
                 </li>
                 <li>
-                    <a href="contact.html">contacts</a>
+                    <a href="/pages/contact.html">contacts</a>
                 </li>
                </ul>
                <!-- Social media links -->
@@ -167,7 +167,7 @@
         <span>*</span> 
     </legend>
     
-    <select id="regprogram" aria-labelledby="registerError">
+    <select id="regprogram" aria-labelledby="registerError" title="register-program">
     <option value=" " selected disabled>Select Option</option>
     <option value="Career/Resume">Build my Career/Resume</option>
     <option value="For Company">Fulfill my Company Requirements</option>
@@ -425,6 +425,6 @@
         <p>Copyright &copy; 2025 | created with ❤️by  Marveey Goodlife </p>
         </footer> 
     <!-- Javascript -->
-<script src="script.js"></script>
-<script src="form.js"></script>
+<script src="/script.js"></script>
+<script src="/Js/form.js"></script>
 </html>
