--- a/pages/services.html
+++ b/pages/services.html
@@ -3,10 +3,10 @@
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Smart tech services & digital training by MGL Tech Hub.">
+    <meta name="description" content="Smart tech services & digital training by MARVEEYLABS.">
     <meta name="Author" content="Marveey Goodlife">
-    <title>MGL Tech Hub | Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MARVEEYLABS | Home</title>
+    <link rel="stylesheet" href="/style.css">
      <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -18,15 +18,14 @@
     />
     <link rel="stylesheet" href="css/all.min.css">
    </head>
- <header aria-label="Header">
-    <nav ria-label="navigation"
-    >
+ <header>
+    <nav>
         <div class="nav-center">
                 <!-- navigation header -->
               <div class="nav-header">
 <!--                 <img src="Assets/logo/red-bg.bmp" alt="logo" class="logo">
- -->                <a href="index.html" class="h1-a">
-  <h1>MGL  Tech Hub
+ -->                <a href="/index.html" class="h1-a">
+  <h1>MARVEEYLABS
   </h1>
  </a>
                 <button class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
@@ -35,19 +34,19 @@
               <!-- links -->
                <ul class="links">
                 <li>
-                    <a href="index.html">home</a>
+                    <a href="/index.html">home</a>
                 </li>
                 <li>
-                    <a href="about.html">about</a>
+                    <a href="/pages/about.html">about</a>
                 </li>
                 <li>
-                    <a href="services.html">services</a>
+                    <a href="/pages/services.html">services</a>
                 </li>
                 <li>
-                    <a href="courses.html">courses</a>
+                    <a href="/pages/courses.html">courses</a>
                 </li>
                 <li>
-                    <a href="contact.html">contacts</a>
+                    <a href="/pages/contact.html">contacts</a>
                 </li>
                </ul>
                <!-- Social media links -->
@@ -85,9 +84,16 @@
    <main class="main">
     
     <section class="hero">
-       <div class="container">
-        <h2>Empowering Digital Skills & Services</h2>
-        <p>ABOUT ME PAGE</p>
+       <div class="container loopdiv">
+        <h2 id="looph2">We <span class="textcontainer">
+           <span class="text">Build.</span>
+          <span class="text">Brand.</span>
+           <span class="text">Design.</span>
+           <span class="text">Teach.</span>
+          <span class="text">Offer Tech Support.</span>
+        </span>
+      </h2>
+        <h3>MY SERVICES</p>
         </div>
     </section>
      
@@ -102,5 +108,5 @@
     <p>Copyright &copy; 2025 | created with ❤️by  Marveey Goodlife </p>
     </footer>
     <!-- Javascript -->
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </html>
