--- a/pages/courses.html
+++ b/pages/courses.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Smart tech services & digital training by MGL Tech Hub.">
     <meta name="Author" content="Marveey Goodlife">
-    <title>MGL Tech Hub | Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MARVEEYLABS | Home</title>
+    <link rel="stylesheet" href="/style.css">
      <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -25,8 +25,8 @@
                 <!-- navigation header -->
               <div class="nav-header">
 <!--                 <img src="Assets/logo/red-bg.bmp" alt="logo" class="logo">
- -->                <a href="index.html" class="h1-a">
-  <h1>MGL  Tech Hub
+ -->                <a href="/index.html" class="h1-a">
+  <h1>MARVEEYLABS
   </h1>
  </a>
                 <button class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
@@ -35,25 +35,25 @@
               <!-- links -->
                <ul class="links">
                 <li>
-                    <a href="index.html">home</a>
+                    <a href="/index.html">home</a>
                 </li>
                 <li>
-                    <a href="about.html">about</a>
+                    <a href="/pages/about.html">about</a>
                 </li>
                 <li>
-                    <a href="services.html">services</a>
+                    <a href="/pages/services.html">services</a>
                 </li>
                 <li>
-                    <a href="courses.html">courses</a>
+                    <a href="/pages/courses.html">courses</a>
                 </li>
                 <li>
-                    <a href="contact.html">contacts</a>
+                    <a href="/pages/contact.html">contacts</a>
                 </li>
                </ul>
                <!-- Social media links -->
                 <ul class="social-icons">
                     <li>
-                        <a href="https://www.facebook.com" aria-label="Facebok" target="_blank" rel="noopener"><i class="fab fa-facebook"></i>
+                        <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook"></i>
                         </a>
                     </li>
                     <li>
@@ -86,8 +86,7 @@
     
     <section class="hero">
        <div class="container">
-        <h2>Empowering Digital Skills & Services</h2>
-        <p>MY SERVICES</p>
+         <h2>COURSE PAGE</h2>
         </div>
     </section>
      
@@ -102,5 +101,5 @@
     <p>Copyright &copy; 2025 | created with ❤️by  Marveey Goodlife </p>
     </footer>
     <!-- Javascript -->
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </html>
