feat() : update all pages with contents delete

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
                 <!-- navigation header -->
               <div class="nav-header">
 <!--                 <img src="Assets/logo/red-bg.bmp" alt="logo" class="logo">
- -->               <a href="index.html" class="h1-a">
-  <h1>MARVEEYLABS
-  </h1>
+ -->        <a href="index.html" class="h1-a">
+              <span class="logo">MARVEEYLABS</span>
  </a>
                 <button class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
                 </button>
@@ -85,7 +84,7 @@
     
     <section class="hero" id="homeHero">
        <div class="container">
-        <h2>Helping Small Businesses and Individual Build Websites That Actually Work</h2>
+        <h1>Helping Small Businesses and Individual Build Websites That Actually Work</h1>
         <p>Stop struggling with websites that are slow, confusing, or just <q>pretty</q>.</p>
         <p>I create functional easy to manage sites that grow with your goals, <br> whether you want to teach, sell, or streamline your business operations.</p>
         <div class="btns">
@@ -217,6 +216,33 @@
     Milky Way Galaxy, <br> 
     Earth.
     </address>
+       <!-- Social media links -->
+                <ul class="footer-social-icons">
+                    <li>
+                        <a href="https://www.facebook.com" aria-label="Facebok" target="_blank" rel="noopener"><i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com" aria-label="Twitter" target="_blank" rel="noopener">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.instagram.com"aria-label="Instagram" target="_blank" rel="noopener">
+                          <i class="fab fa-instagram"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.fa-linkedin.com" aria-label="LinkedIn" target="_blank" rel="noopener">
+                          <i class="fab fa-linkedin"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.tiktok.com" aria-label="Tiktok" target="_blank" rel="noopener">
+                          <i class="fab fa-tiktok"></i>
+                        </a>
+                        </li>
+                </ul>
     <p>Copyright &copy; 2025 | created with ❤️by  
       <a href="tel:+234903434343">Marveey Goodlife </a>
     </p>
