--- a/pages/about.html
+++ b/pages/about.html
@@ -131,7 +131,7 @@
       </article>
       <div class="btns">
         <a href="/pages/services.html" class="btn">see my services</a>
-        <a href="/pages/contact.html" class="btn">contact me today</a>
+        <a href="/pages/contact.html" class="btn">contact me  </a>
       </div>
      </section>
    </main>
