--- a/pages/contact.html
+++ b/pages/contact.html
@@ -135,6 +135,7 @@
     <section class="section-container">
         <h2>location & service area</h2>
         <!-- add map -->
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31516.16375764292!2d7.479618799999992!3d9.107372250000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0a87339fe02b%3A0x773c33cd5add59d4!2sMaitama%20Junction%2C%20Maitama%2C%20Abuja%20904101%2C%20Federal%20Capital%20Territory!5e0!3m2!1sen!2sng!4v1771549022096!5m2!1sen!2sng" width="500"    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
        <p> I’m based in Abuja, Nigeria and work with   clients <b>both locally and remotely</b>. Location is not a barrier.</p>
         <p>If you have internet access, we can work together.</p>
 
