feat() : fixed form style made correction to typos across pages added type attributes to button set list style type to none in footer social icons

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
  -->        <a href="index.html" class="h1-a">
               <span class="logo">MARVEEYLABS</span>
  </a>
-                <button class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
+                <button class="nav-toggle" aria-label="navigation button" type="button"><i class="fas fa-bars"></i>
                 </button>
               </div>
               <!-- nav links -->
                <ul class="links">
                 <li>
-                    <a href="/">home</a>
+                    <a href="/index.html">home</a>
                 </li>
                 <li>
                     <a href="/pages/about.html">about</a>
@@ -88,7 +88,7 @@
         <p>Stop struggling with websites that are slow, confusing, or just <q>pretty</q>.</p>
         <p>I create functional easy to manage sites that grow with your goals, <br> whether you want to teach, sell, or streamline your business operations.</p>
         <div class="btns">
-<a href="/pages/contact.html" class="btn">Get Your Websites or Consultation</a>
+<a href="/pages/contact.html" class="btn">Get Your Websites<!--  or Consultation --></a>
 <a href="/pages/contact.html" class="btn">Explore Services</a>
         </div>
         
@@ -125,7 +125,7 @@
         </div>
         <div class="serviceCard">
           <h3>Graphic Design</h3>
-          <p>Modern, clean designs that make an impact.p>
+          <p>Modern, clean designs that make an impact.</p>
         </div>
         <div class="serviceCard">
           <h3>Teaching Web & Computer Skills</h3>
