--- a/pages/about.html
+++ b/pages/about.html
@@ -18,9 +18,8 @@
     />
     <link rel="stylesheet" href="css/all.min.css">
    </head>
- <header aria-label="Header">
-    <nav ria-label="navigation"
-    >
+ <header>
+    <nav>
         <div class="nav-center">
                 <!-- navigation header -->
               <div class="nav-header">
@@ -29,7 +28,7 @@
   <span class="logo">MARVEEYLABS
   </span>
  </a>
-                <button class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
+                <button class="nav-toggle" aria-label="navigation button" type="button"><i class="fas fa-bars"></i>
                 </button>
               </div>
               <!-- links -->
@@ -113,7 +112,7 @@
       <div>
         <h2>my vision</h2>
         <p>
-          A world where anyone, students, entrepreneurs, or professionals can confidently use technology to <b>build, teach, and grow</b>, without being help back by technical roadblocks.
+          A world where anyone, students, entrepreneurs, or professionals can confidently use technology to <b>build, teach, and grow</b>, without being held back by technical roadblocks.
         </p>
       </div>
     </section>
@@ -126,7 +125,7 @@
         </li>
         <li>I teach <b>hands-on skills</b> so you can manage your own projects confidently.</li>
         <li>I value <b>clarity, trust, and results</b>, you always know what to expect.</li>
-        <li>I deliver websites and support that are <b>efficient, reliable, and east to use</b>.</li>
+        <li>I deliver websites and support that are <b>efficient, reliable, and easy to use</b>.</li>
         </ul>
       </article>
       <div class="btns">
