--- a/pages/services.html
+++ b/pages/services.html
@@ -28,7 +28,7 @@
   <span class="logo">MARVEEYLABS
   </span>
  </a>
-                <button type="button" class="nav-toggle" aria-label="button" title="button"><i class="fas fa-bars"></i>
+                <button type="button" class="nav-toggle" aria-label="navigation button"><i class="fas fa-bars"></i>
                 </button>
               </div>
               <!-- links -->
@@ -82,7 +82,7 @@
     <section class="hero">
        <div class="container loopdiv">
        <h1>web development, graphic design & practical tech services</h1>
-       <p>I provide <b>clear, reliable tech services</b> designed to solve real problems. <br>Whether you need a professional website, want to learn digital skills, or need everyday tech support, my foucs is simple: results that make your work easier.
+       <p>I provide <b>clear, reliable tech services</b> designed to solve real problems. <br>Whether you need a professional website, want to learn digital skills, or need everyday tech support, my focus is simple: results that make your work easier.
        </p>
          </div>
     </section>
@@ -99,8 +99,7 @@
           <div class="serviceGridCard">
             <h3>What this service solves</h3>
             <ul>
-              <li>You need a website but do not know where to start</li>
-              <li>You need a website but do not know where to start</li>
+               <li>You need a website but do not know where to start</li>
               <li>Your current site is slow, outdated, or hard to manage</li>
               <li>You want something professional without unnecessary complexity</li>
             </ul>
@@ -136,7 +135,7 @@ What you get</h3>
           <div class="serviceGridCard">
             <h3>What this service solves</h3>
             <ul>
-              <li>Your graphi looks unprofessional or confusing</li>
+              <li>Your graphic looks unprofessional or confusing</li>
               <li>Visitors leave without taking action</li>
               <li>Your brand does not feel clear or consistent</li>
              </ul>
@@ -159,6 +158,7 @@ What you get</h3>
             </ul>
           </div>
           <a href="/pages/contact.html">Get a Custom Website Design</a>
+          </div>
  </article>
     </section>
      <section>
