feat: Update layout for homepage and about Add content to services Styled scroll to top button delete course nav link from index.html Add spacing

--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
                     <a href="/pages/services.html">services</a>
                 </li>
                 <li>
-                    <a href="/pages/courses.html">courses</a>
-                </li>
-                <li>
                     <a href="/pages/contact.html">contacts</a>
                 </li>
                </ul>
@@ -80,20 +77,19 @@
     </nav>
  </header>
  <!-- Main section -->
-   <main class="main">
-    
+   <main class="main"> 
     <section class="hero" id="homeHero">
        <div class="container">
-        <h1>Helping Small Businesses and Individual Build Websites That Actually Work</h1>
-        <p>Stop struggling with websites that are slow, confusing, or just <q>pretty</q>.</p>
-        <p>I create functional easy to manage sites that grow with your goals, <br> whether you want to teach, sell, or streamline your business operations.</p>
+        <h1>Helping Small Businesses and Individual Build Websites That Work</h1>
+
+        <p class="p">Stop struggling with websites that are slow, confusing, or just <q>pretty</q>? <br> I create functional easy to manage sites that grow with your goals, whether you want to teach, sell, or streamline your business operations.</p>
         <div class="btns">
 <a href="/pages/contact.html" class="btn">Get Your Websites<!--  or Consultation --></a>
 <a href="/pages/contact.html" class="btn">Explore Services</a>
         </div>
-        
        </div>
     </section>
+
     <!-- problem section -->
     <section  class="section-container">
       <h2>Why Most Websites Fail</h2>
@@ -119,7 +115,7 @@
       <h2>How I Can Help You</h2>
 
       <article class="review">
-        <div class="review">
+        <div class="serviceCard">
           <h3>Web Development</h3>
           <p>Launch functional, performance focused websites.</p>
         </div>
@@ -141,6 +137,7 @@
         <p class="proof"><q>I never taught I could understand web basics until his teaching made it simple.</q> <small> &hyphen; Student</small></p>
        </div> -->
     </section>
+
     <!-- reviews section -->
      <section id="Reviews" class="section-container">
       <div class="title">
@@ -148,6 +145,7 @@
         <div class="underline"></div>
         <p>Check out what people are saying about our services</p>
       </div>
+
       <article class="review">
         <div id="img-container">
           <img src="images/marveey.jpg" id="person-img" alt="Service User" width="150px" height="150px">
@@ -158,10 +156,11 @@
         <q>Marveey helped me launch my site in days, not months! super easy and effective.</q>
       </p>
         <div class="button-container">
-          <button class="prev-btn" aria-label="Previous button"><i class="fas fa-chevron-left"></i></button>
-          <button class="next-btn" aria-label="Next button"><i class="fas fa-chevron-right"></i></button>
+          <button type="button" class="prev-btn" aria-label="Previous button"><i class="fas fa-chevron-left"></i></button>
+          <button type="button" class="next-btn" aria-label="Next button"><i class="fas fa-chevron-right"></i></button>
         </div>
       </article>
+
      </section>
      <!-- FAQ section -->
       <section class="section-container">
