--- a/pages/about.html
+++ b/pages/about.html
@@ -23,8 +23,7 @@
         <div class="nav-center">
                 <!-- navigation header -->
               <div class="nav-header">
-<!--                 <img src="Assets/logo/red-bg.bmp" alt="logo" class="logo">
- -->                <a href="/index.html" class="h1-a">
+       <a href="/index.html" class="h1-a">
   <span class="logo">MARVEEYLABS
   </span>
  </a>
@@ -80,7 +79,7 @@
  <!-- Main section -->
    <main class="main">
     
-    <section class="hero">
+    <section class="hero" id="aboutHero">
        <div class="container">
         <h1>About marveey - web developer and tech educator</h1>
         <p>
