--- a/pages/services.html
+++ b/pages/services.html
@@ -86,18 +86,17 @@
        </p>
          </div>
     </section>
-    <section class="section-container">
 
+    <section class="section-container">
       <article class="review">
-        <div>
+        <!-- web dev -->
+        <span>
           <h2>web development services</h2>
           <h3><b>Build a Website That Works, Not Just One That Looks Good</b></h3>
-          <p>
-            A website should help you grow, not frustrate you. I build fast, functional, and easy-to-manage websites that support your goals from day one. 
-          </p>
+          <p>A website should help you grow, not frustrate you. I build fast, functional, and easy-to-manage websites that support your goals from day one.</p>
 
           <div class="serviceGridCard">
-            <h3>What this service solves</h3>
+            <h4>What this service solves</h4>
             <ul>
                <li>You need a website but do not know where to start</li>
               <li>Your current site is slow, outdated, or hard to manage</li>
@@ -105,7 +104,7 @@
             </ul>
           </div>
           <div  class="serviceGridCard">
-            <h3>Who this is for</h3>
+            <h4>Who this is for</h4>
             <ul>
               <li>Small business owners</li>
               <li>Entrepreneurs and personal brands</li>
@@ -113,8 +112,7 @@
             </ul>
           </div>
           <div class="serviceGridCard">
-            <h3>
-What you get</h3>
+            <h4>What you get</h4>
             <ul>
               <li>Clean, responsive website development</li>
               <li>A site you can manage confidently after launch</li>
@@ -122,18 +120,15 @@ What you get</h3>
             </ul>
           </div>
           <a href="/pages/contact.html">start your web project</a>
-         </div>
-        <!-- graphic service -->
-        <div>
+        </span>
+        <!-- graphic services -->
+        <span>
           <h2>graphic Design Services</h2>
-          <h3><b>Simple, Clean Design That Builds Trust
-</b></h3>
-          <p>
-           Design is not about decoration. It is about clarity. I design products that look professional, guide users naturally, and support conversions.
-          </p>
+          <h3><b>Simple, Clean Design That Builds Trust</b></h3>
+          <p>Design is not about decoration. It is about clarity. I design products that look professional, guide users naturally, and support conversions.</p>
 
           <div class="serviceGridCard">
-            <h3>What this service solves</h3>
+            <h4>What this service solves</h4>
             <ul>
               <li>Your graphic looks unprofessional or confusing</li>
               <li>Visitors leave without taking action</li>
@@ -141,7 +136,7 @@ What you get</h3>
              </ul>
           </div>
           <div  class="serviceGridCard">
-            <h3>Who this is for</h3>
+            <h4>Who this is for</h4>
             <ul>
               <li>Businesses needing a modern online presence</li>
               <li>Individuals building credibility online</li>
@@ -149,19 +144,67 @@ What you get</h3>
             </ul>
           </div>
           <div class="serviceGridCard">
-            <h3>
-What you get</h3>
+            <h4>What you get</h4>
             <ul>
               <li>Clean, modern layouts</li>
               <li>User-focused design decisions</li>
               <li>visual clarity that support your message</li>
             </ul>
           </div>
-          <a href="/pages/contact.html">Get a Custom Website Design</a>
-          </div>
+          <!-- cta -->
+          <a href="/pages/contact.html">Get a Custom graphic Design</a>
+        </span>
+        <!-- teaching services -->
+         <span>
+          <h2>Teaching Web Development & Computer Skills</h2>
+          <h3>Learn Skills You Can Use Immediately</h3>
+          <p>I teach web development and computer basics in a practical, beginner friendly way.No theory overload. Just skills that make sense.</p>
+          <h4>What this service solves</h4>
+          <ul>
+            <li>You want to learn web development but feel overwhelmed</li>
+            <li>You need computer skills for work or personal growth</li>
+            <li>You want hands-on learning, not confusing explanations</li>
+          </ul>
+
+<h4>Who this is for</h4>	
+<ul>
+  <li>Beginners and students</li>
+  <li>Career switchers</li>
+  <li>Professionals improving digital skills</li>
+</ul>
+
+<h4>What you learn</h4>
+<ul>
+  <li>Computer basics and digital confidence</li>
+  <li>HTML, CSS, and web fundamentals</li>
+  <li>How to think clearly when solving tech problems</li>
+</ul>
+	<a href="/pages/contact.html">Start Learning With Me</a>
+         </span>
+         <!-- unknown services -->
+          <span>
+            <h3>Not Sure Which Service You Need?</h3>
+            <p>That’s normal. Many clients start with a simple conversation. I will help you figure out the best solution based on your goals, budget, and timeline.</p>
+            <a href="/pages/contact.html">Contact Me for a Consultation</a>
+
+<!-- 
+Trust Reassurance Section
+
+You will always get:
+	•	Clear communication
+	•	Honest guidance
+	•	Practical solutions
+	•	Respect for your time and goals 
+
+No confusion. No pressure. Just help that works. -->
+          </span>
+
  </article>
     </section>
+
+
      <section>
+      <div class="loopdiv">
        <h2 id="looph2">We <span class="textcontainer">
            <span class="text">Build.</span>
           <span class="text">Brand.</span>
@@ -170,6 +213,7 @@ What you get</h3>
           <span class="text">Offer Tech Support.</span>
         </span>
       </h2>
+      </div>
      </section>
    </main>
        <a href="#" class="topScrollBtn"> &UpArrow;</a>
