--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <meta name="Author" content="Marveey Goodlife">
     <title>Contact MarveeyLabs |Web Developer & Tech Support Services</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/form.css">
      <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -79,6 +79,8 @@
 
     </nav>
  </header>
+ <body>
+  
  <!-- Main section -->
  <main>
 <section class="hero">
@@ -156,11 +158,27 @@
         </p>
         <a href="mailto:marveey8027@gmail.com" class="btn"> start the conversation</a>
     </section>
-    </main>
-        <a href="#" class="topScrollBtn"> &UpArrow;</a>
+</main>
+<a href="#" class="topScrollBtn"> &UpArrow;</a>
+ </body>
 
     <footer> 
         <div>
+          <!-- footer nav links -->
+               <ul class="footer-links">
+                <li>
+                    <a href="/index.html">home</a>
+                </li>
+                <li>
+                    <a href="/pages/about.html">about</a>
+                </li>
+                <li>
+                    <a href="/pages/services.html">services</a>
+                </li>
+                <li>
+                    <a href="/pages/contact.html">contacts</a>
+                </li>
+               </ul>
             
                <!-- Social media links -->
                <ul class="footer-social-icons">
