--- a/pages/services.html
+++ b/pages/services.html
@@ -77,6 +77,9 @@
 
     </nav>
  </header>
+ <body>
+  
+  
  <!-- Main section -->
    <main class="main">
     <section class="hero">
@@ -217,9 +220,25 @@ No confusion. No pressure. Just help that works. -->
      </section>
    </main>
        <a href="#" class="topScrollBtn"> &UpArrow;</a>
+ </body>
 
    <!-- footer -->
    <footer> 
+    <!-- footer nav links -->
+               <ul class="footer-links">
+                <li>
+                    <a href="/index.html">home</a>
+                </li>
+                <li>
+                    <a href="/pages/about.html">about</a>
+                </li>
+                <li>
+                    <a href="/pages/services.html">services</a>
+                </li>
+                <li>
+                    <a href="/pages/contact.html">contacts</a>
+                </li>
+               </ul>
      <!-- Social media links -->
                 <ul class="footer-social-icons">
                     <li>
