--- a/index.html
+++ b/index.html
@@ -76,8 +76,25 @@
 
     </nav>
  </header>
+ <body id="indexpage">
+  
  <!-- Main section -->
    <main class="main"> 
+    <div id="overlay" class="hidden">
+      <div id="modalBox" >
+        <button type="button" class="closeModal">&times</button>
+        <div class="overlayContent">
+          <h2>Join our newsletter</h2>
+          <p>We'd love to send you latest updates to your inbox.</p>
+          <form action="" method="post" id="modalForm">
+               <input type="email" name="newsletter" id="newsletter" placeholder="Enter your email">
+               <div class="modalError" id="modalError"></div> 
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+
+    </div>
     <section class="hero" id="homeHero">
        <div class="container">
         <h1>Helping Small Businesses and Individual Build Websites That Work</h1>
@@ -85,7 +102,7 @@
         <p class="p">Stop struggling with websites that are slow, confusing, or just <q>pretty</q>? <br> I create functional easy to manage sites that grow with your goals, whether you want to teach, sell, or streamline your business operations.</p>
         <div class="btns">
 <a href="/pages/contact.html" class="btn">Get Your Websites<!--  or Consultation --></a>
-<a href="/pages/contact.html" class="btn">Explore Services</a>
+<a href="/pages/services.html" class="btn">Explore Services</a>
         </div>
        </div>
     </section>
@@ -107,14 +124,14 @@
         <p>
           No wasted time. No tech headaches. Just a websites that work for you.
         </p>
-        <a href="/pages/contact.html" class="btn">Let’s Solve Your Website Challenges</a>
+        <a href="/pages/contact.html" class="secondaryBtn btn">Let’s Solve Your Website Challenges</a>
       </article>
     </section>
 <!-- solution section -->
     <section class="section-container">
       <h2>How I Can Help You</h2>
 
-      <article class="review">
+      <article class="review" id="serviceCardContainer">
         <div class="serviceCard">
           <h3>Web Development</h3>
           <p>Launch functional, performance focused websites.</p>
@@ -131,7 +148,7 @@
           <h3>Office Tech Support</h3>
           <p>Solve everyday tech problems quickly and efficiently.</p>
         </div>
-          <a href="/pages/services.html" class="secondaryBtn">See All Services</a>      
+          <a href="/pages/services.html" class="secondaryBtn btn">See All Services</a>      
       </article>
        <!-- <div id="socialProof">
         <p class="proof"><q>I never taught I could understand web basics until his teaching made it simple.</q> <small> &hyphen; Student</small></p>
@@ -203,18 +220,38 @@
               <p>Yes. I provide training and support.</p>
             </div>
           </div>
-          <a href="/pages/contact.html" class="btn">Start your project today</a>
+          <a href="/pages/contact.html" class="secondaryBtn btn">Start your project today</a>
         </article>
       </section>
    </main>
+       <a href="#" class="topScrollBtn" id="topScrollBtn"> &UpArrow;</a>
+ </body>
    <!-- footer -->
-    <a href="#" class="topScrollBtn"> &UpArrow;</a>
    <footer> 
+    <div class="linksContainer">
     <address>
     123, Macpherson Boulevard <br>
     Milky Way Galaxy, <br> 
     Earth.
     </address>
+    
+          <!-- footer nav links -->
+               <ul class="footer-links">
+                <li>
+                    <a href="/index.html">home</a>
+                </li>
+                <li>
+                    <a href="/pages/about.html">about</a>
+                </li>
+                <li>
+                    <a href="/pages/services.html">services</a>
+                </li>
+                <li>
+                    <a href="/pages/contact.html">contacts</a>
+                </li>
+               </ul>
+
+    </div>
        <!-- Social media links -->
                 <ul class="footer-social-icons">
                     <li>
@@ -245,7 +282,7 @@
     <p>Copyright &copy; 2025 | created with ❤️by  
       <a href="tel:+234903434343">Marveey Goodlife </a>
     </p>
-    </footer>
+  </footer>
     <!-- Javascript -->
 <script src="script.js"></script>
 </html>
