--- a/pages/about.html
+++ b/pages/about.html
@@ -76,6 +76,8 @@
 
     </nav>
  </header>
+ <body>
+  
  <!-- Main section -->
    <main class="main">
     
@@ -133,11 +135,25 @@
       </div>
      </section>
    </main>
-       <a href="#" class="topScrollBtn"> &UpArrow;</a>
-
+  <a href="#" class="topScrollBtn"> &UpArrow;</a>
+ </body>
    <!-- footer -->
    <footer> 
-    
+    <!-- footer nav links -->
+               <ul class="footer-links">
+                <li>
+                    <a href="/index.html">home</a>
+                </li>
+                <li>
+                    <a href="/pages/about.html">about</a>
+                </li>
+                <li>
+                    <a href="/pages/services.html">services</a>
+                </li>
+                <li>
+                    <a href="/pages/contact.html">contacts</a>
+                </li>
+               </ul>
         <!-- Social media links -->
                 <ul class="footer-social-icons">
                     <li>
